--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <me ta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Anisa's Website</h1>
-    <h2>A website made by me</h2>
+    <h1 class="head purple-font">Anisa's Website</h1>
+    <h2 id="id">A website made by me</h2>
 </body>
