--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <me ta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
     <h1 class="head purple-font">Anisa's Website</h1>
     <h2 id="id">A website made by me</h2>
+    <div class="blogpost">
+        <img class="Blog Post #1" src="" alt="" </div>
+
 </body>
