--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Gluten&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <h1 class="head purple-font">Anisa's Website</h1>
-    <h2 id="id">A website made by me</h2>
-    <div class="blogpost">
-        <img class="Blog Post #1" src="" alt="" </div>
-
-</body>
+    <h1 class="head purple-font">Anisa's Blog</h1>
+    <h2 class="center" id="id">Ideas on some of the most important controversial questions of today</h2>
+    <div class="blogpost post-1"></div>
+    <div class="blogpost post-2"></div>
+    <div class="blogpost post-3"></div>
