--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <h1 class="head purple-font">Anisa's Blog</h1>
-    <h2 class="center" id="id">Ideas on some of the most important controversial questions of today</h2>
-    <div class="blogpost post-1"></div>
+    <h2 class="center" id="id">Ideas on some of the most important, controversial questions of today</h2>
+    <div class="blogpost post-1">Who is Mr. Whalen's Least Favorite Teacher?</div>
     <div class="blogpost post-2"></div>
     <div class="blogpost post-3"></div>
