--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
     <h1 class="head purple-font">Anisa's Blog</h1>
     <h2 class="center" id="id">Ideas on some of the most important, controversial questions of today</h2>
-    <div class="blogpost post-1">Who is Mr. Whalen's Least Favorite Teacher?</div>
-    <div class="blogpost post-2"></div>
-    <div class="blogpost post-3"></div>
+    <div class="blogpost center post-1">
+        <h2>Who is Mr. Whalen's Least Favorite Teacher?</h2>
+        <img class="post-1" src="WhalenMichael.jpg" alt="Picture of Mr. Whalen">
+        <p><a href="">Click here to find out!</a></p>
+    </div>
+    <div class="blogpost center post-2"></div>
+    <div class="blogpost center post-3"></div>
+</body>
+
+</html>
