--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
         <img class="post-1" src="WhalenMichael.jpg" alt="Picture of Mr. Whalen">
         <p><a href="">Click here to find out!</a></p>
     </div>
-    <div class="blogpost center post-2"></div>
-    <div class="blogpost center post-3"></div>
+    <div class="blogpost center post-2">
+        <h2>Who is Mr. Whalen's Least Favorite Teacher?</h2>
+        <img class="post-1" src="WhalenMichael.jpg" alt="Picture of Mr. Whalen">
+        <p><a href="">Click here to find out!</a></p>
+    </div>
+    <div class="blogpost center post-3">
+        <h2>Who is Mr. Whalen's Least Favorite Teacher?</h2>
+        <img class="post-1" src="WhalenMichael.jpg" alt="Picture of Mr. Whalen">
+        <p><a href="">Click here to find out!</a></p>
+    </div>
 </body>
 
 </html>
