--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
 
     <h1 class="head purple-font">Anisa's Blog</h1>
-    <h2 class="center" id="id">Ideas on some of the most important, controversial questions of today</h2>
+    <h2 class="center" id="id">Ideas on some of the most important, controversial topics of today</h2>
     <div class="blogpost center post-1">
         <h2>Who is Mr. Whalen's Least Favorite Teacher?</h2>
         <img class="post-1" src="WhalenMichael.jpg" alt="Picture of Mr. Whalen">
         <p><a href="">Click here to find out!</a></p>
     </div>
     <div class="blogpost center post-2">
-        <h2>Who is Mr. Whalen's Least Favorite Teacher?</h2>
-        <img class="post-1" src="WhalenMichael.jpg" alt="Picture of Mr. Whalen">
+        <h2>How to silently stare at a student and make them uncomfortable</h2>
+        <img class="post-2" src="WazowskiMike.JPG" alt="Mike Wazowski Meme">
         <p><a href="">Click here to find out!</a></p>
     </div>
     <div class="blogpost center post-3">
-        <h2>Who is Mr. Whalen's Least Favorite Teacher?</h2>
-        <img class="post-1" src="WhalenMichael.jpg" alt="Picture of Mr. Whalen">
+        <h2>Who is Sammy the Seagull?</h2>
+        <img class="post-3" src="SammytheSeagull.jpg" alt="Sammy the Seagull">
         <p><a href="">Click here to find out!</a></p>
     </div>
 </body>
